[package]
name = "moonlander-gp"
version = "0.1.1"
authors = ["Rico Huijbers <rix0rrr@gmail.com>", "Daan van Berkel <daan.v.berkel.1980@gmail.com>"]
license = "MIT"
description = "Genetic Programming framework providing AST abstraction and evolution routines."


[dependencies]
rand = "0.3"
rustc-serialize = "0.3"
downcast = "0.6"
rayon = "0.4"
